Fixed styling to look better on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -75,6 +75,8 @@
 
 .title {
   margin: 0;
+  display: flex;
+  flex-wrap: wrap;
   line-height: 1.15;
   font-size: 4rem;
   padding-bottom: 4vh;
@@ -83,6 +85,8 @@
 
 .titledark {
   margin: 0;
+  display: flex;
+  flex-wrap: wrap;
   line-height: 1.15;
   font-size: 4rem;
   padding-bottom: 4vh;
